--- a/index.html
+++ b/index.html
@@ -5,3 +5,15 @@ show_excerpts: true
 paginate: true
 entries_layout: list
 ---
+
+We want to travel around Portugal in a camper van, from river bathing spot to river bathing spot. 
+
+We want to see a lot of nature and meet people along the way. We will also visit a museum or two.
+We will start and finish in Lisbon. And in between we will be inspired. 
+
+The N2 appeals to us very much - what it will be in the end will show us the way. 
+We have collected a few ideas of places we might visit, so that we can always see what is close by along the way.
+
+We're looking forward to it.
+
+Maybe there is something for you too, or you have ideas for us. Then write to me. I look forward to hearing from you.
